dist_man1_MANS=

if BUILD_LABYRINTHD
  dist_man1_MANS+=labyrinthd.1
endif

if ENABLE_QT
  dist_man1_MANS+=labyrinth-qt.1
endif

if BUILD_LABYRINTH_CLI
  dist_man1_MANS+=labyrinth-cli.1
endif

if BUILD_LABYRINTH_TX
  dist_man1_MANS+=labyrinth-tx.1
endif

if ENABLE_WALLET
if BUILD_LABYRINTH_WALLET
  dist_man1_MANS+=labyrinth-wallet.1
endif
endif
